update case study

--- a/GGTL.IN.html
+++ b/GGTL.IN.html
@@ -226,10 +226,10 @@
             <div class="page-header flex-middle">
                 <div class="container">
                     <div class="inner flex-middle">
-                        <h1 class="page-title">The Country Resort</h1>
+                        <h1 class="page-title">GGTL.IN</h1>
                         <ul id="breadcrumbs" class="breadcrumbs none-style">
                             <li><a href="index.html">Home</a></li>
-                            <li class="active">The Country Resort</li>
+                            <li class="active">GGTL.IN</li>
                         </ul>    
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2>The Country Resort</h2>
+                            <h2>GGTL.IN</h2>
                         </div>   
                     </div>
                     <div class="row">
@@ -257,7 +257,7 @@
                         <div class="col-lg-3 col-md-6 col-sm-6 col-6 mb-4 mb-sm-0">
                             <div class="project-detail">
                                 <span>CLIENT:</span>
-                                <strong>The Country Resort</strong>
+                                <strong>GGTL.IN</strong>
                             </div>
                         </div>
                         <!-- <div class="col-lg-3 col-md-6 col-sm-6 col-6">
@@ -278,7 +278,9 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h3>Client's Challenges: </h3>
-                            <p><span class="drop-cap"><span class="drop-cap-letter">C</span></span> ountry Resort, a unit of Prestige Vacations Pvt Ltd, faced the challenge of establishing its initial online presence. With no previous website, the client needed to overcome the hurdle of creating a platform that effectively showcased the resort's appeal while incorporating essential functionalities for potential guests.
+                            <p><span class="drop-cap"><span class="drop-cap-letter">G</span></span> GTL.IN, a leading Gem testing laboratory, faced challenges in the digital realm due to the absence of a dedicated website. The lack of an online platform hindered their ability to effectively communicate their expertise, services, and the importance of gem testing to a wider audience. The client recognized the need for a modern, informative, and authoritative website to establish a strong online presence in the gem testing industry.
+
+
                             <!-- <blockquote>
                                 <p>I cannot give you the formula for success, but I can give you the formula for failure. <br> It is: Try to please everybody.<br>
                                 <cite>– Herbert Bayard Swope</cite></p>
@@ -298,7 +300,8 @@
                                 </div>
                             </div>
                             <h3>Our Solution:</h3>
-                            <p>In response to this, our team initiated the development of Country Resort's inaugural website. Focusing on a clean and captivating design, we built a user-friendly platform that not only introduced the resort to the online audience but also incorporated an integrated booking system, ensuring a seamless experience for visitors looking to explore and reserve accommodations. Emphasizing a mobile-first approach, the website was meticulously designed to be responsive across various devices, providing an optimal viewing experience for users on smartphones and tablets. Additionally, we implemented robust SEO practices to enhance the resort's online visibility, ensuring that it ranks favorably in search engine results, driving organic traffic and further establishing Country Resort's presence in the digital landscape. By providing a comprehensive solution for their first online venture, we set the foundation for Country Resort to successfully connect with its audience, facilitate hassle-free bookings, and achieve a strong online presence from the outset.</p>
+                            <p>In response to GGTL.IN's challenges, our team undertook the design and development of a comprehensive website. We focused on creating an engaging and informative platform that effectively conveyed the laboratory's expertise in gem testing. The website incorporated detailed information about their testing procedures, certifications, and the significance of gemstone analysis. A visually appealing design and intuitive navigation were implemented to enhance user experience. Additionally, we integrated a secure and user-friendly contact system to facilitate inquiries and service requests. The website was optimized for mobile responsiveness, ensuring accessibility for users on various devices. The result was a dynamic online presence that not only showcased GGTL.IN's authority in gem testing but also provided an educational and interactive experience for visitors seeking reliable gemstone analysis services.
+                            </p>
                             <!-- <div class="blog-post projects-meta">
                                 <div class="entry-footer clearfix">
                                     <div class="widget_tag_cloudd tagcloud">
