--- a/natyacharya-schools.html
+++ b/natyacharya-schools.html
@@ -226,10 +226,10 @@
             <div class="page-header flex-middle">
                 <div class="container">
                     <div class="inner flex-middle">
-                        <h1 class="page-title">Portfolio Single</h1>
+                        <h1 class="page-title">Natyacharya Schools</h1>
                         <ul id="breadcrumbs" class="breadcrumbs none-style">
                             <li><a href="index.html">Home</a></li>
-                            <li class="active">Portfolio Single</li>
+                            <li class="active">Natyacharya Schools</li>
                         </ul>    
                     </div>
                 </div>
@@ -238,36 +238,36 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2>App for Virtual Reality</h2>
+                            <h2>Natyacharya Schools</h2>
                         </div>   
                     </div>
                     <div class="row">
                         <div class="col-lg-3 col-md-6 col-sm-6 col-6 mb-4 mb-lg-0">
                             <div class="project-detail">
                                 <span>PUBLISHED:</span>
-                                <strong>April 20, 2019</strong>
+                                <strong>2019</strong>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-6 col-6 mb-4 mb-sm-0">
                             <div class="project-detail">
                                 <span>CATEGORY:</span>
-                                <strong>Design / Ideas</strong>
+                                <strong>Web Development</strong>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-6 col-6 mb-4 mb-sm-0">
                             <div class="project-detail">
                                 <span>CLIENT:</span>
-                                <strong>ThemeModern</strong>
+                                <strong>Natyacharya Schools</strong>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-6 col-6">
+                        <!-- <div class="col-lg-3 col-md-6 col-sm-6 col-6">
                             <div class="otf-social-share clearfix shape-circle">
                                 <a class="share-facebook" href="facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
                                 <a class="share-twitter" href="twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
                                 <a class="share-pinterest" href="pinterest.com" target="_blank"><i class="fab fa-pinterest-p"></i></a>
                                 <a class="share-linkedin" href="linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="space-50"></div>
                     <div class="row">
@@ -277,13 +277,12 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <h3>How it Works </h3>
-                            <p><span class="drop-cap"><span class="drop-cap-letter">M</span></span> obile apps have already penetrated every sphere of our lives and every imaginable business niche. Naturally, the appeal of mobile apps for its market potential cannot fade away anytime soon, at least until another great technology can replace mobile apps. development company and its business clients. So, what about the failure of other apps? What are the key factors responsible for the failure of millions of apps? Well, apart from the ill-conceived app idea and development and design flaws many apps simply fail because of their <strong>pre-launch and post-launch shortcomings.</strong></p>
-                            <p>Front-end development essentially focuses and works on the visual perceptions of a website. It’s about the look, load time, pattern and functionality of the components of a website. Front-End is a mix of programming and layout that powers the visuals and interactions on the web. The talented Front-end developers provide turnkey Front-End development services whether you are planning to change the Front-End from older technology to newer one, for example Angular.</p>
-                            <blockquote>
+                            <h3>Client's Challenges: </h3>
+                            <p><span class="drop-cap"><span class="drop-cap-letter">N</span></span> atyacharya Schools, a renowned music and dance institution, faced the challenge of establishing their very first online presence. With no prior website, the client sought to create a digital platform that could effectively represent the cultural richness and diverse educational programs offered by the school. The goal was to provide a compelling and informative space for prospective students and parents interested in exploring Natyacharya Schools' curriculum.
+                            <!-- <blockquote>
                                 <p>I cannot give you the formula for success, but I can give you the formula for failure. <br> It is: Try to please everybody.<br>
                                 <cite>– Herbert Bayard Swope</cite></p>
-                            </blockquote>
+                            </blockquote> -->
                             <div class="simple-slider owl-theme owl-carousel">
                                 <div class="projects-slide-item">
                                     <img src="images/projects/project-details-s1.png" alt="">
@@ -298,10 +297,9 @@
                                     <img src="images/projects/project-details-s2.png" alt="">
                                 </div>
                             </div>
-                            <h3>Process & Results </h3>
-                            <p>But while DevOps as a development approach remained uncontested, the security aspects of the app development process largely remained under the shadow. There was a perception that along with the operations, app security should equally be a part of the development process. With the demand for integrating security with the product life cycle, the DevSecOps approach has emerged. <span class="text-second text-decoration-line">This approach has already proven </span> to play an instrumental role in reducing the security vulnerabilities of the apps. While integrating the security with the DevOps approach has always been of high demand, this requires a completely different range of processes and tools. DevOps is already known to boast of an agile development methodology.</p>
-                            <p>While integrating the security with the DevOps approach has always been of high demand, this requires a completely different range of processes and tools. DevOps is already known to boast of an agile development methodology. Though the companies embracing DevSecOps development methodology are only a few in numbers, in the time to come many companies working with DevOps approach can actually embrace this new methodology for giving their projects.</p>
-                            <div class="blog-post projects-meta">
+                            <h3>Our Solution:</h3>
+                            <p>To meet Natyacharya Schools' needs, our team undertook the design and development of their inaugural website. We focused on creating a visually captivating and culturally resonant online space that reflected the ethos of the institution. The website featured user-friendly navigation, offering detailed insights into the various music and dance programs available. Multimedia elements were incorporated to showcase performances, faculty expertise, and the vibrant community of the school. Ensuring responsiveness across devices, from desktops to mobile phones, the website aimed to provide a seamless and accessible experience. The result was a dynamic and engaging online platform that not only marked Natyacharya Schools' entry into the digital realm but also served as an effective tool for prospective students and parents to explore the enriching world of music and dance education </p>
+                            <!-- <div class="blog-post projects-meta">
                                 <div class="entry-footer clearfix">
                                     <div class="widget_tag_cloudd tagcloud">
                                         <a href="#">startup</a> 
@@ -356,7 +354,7 @@
                                             </div>
                                         </article>
                                     </li>
-                                    <!-- #comment-## -->
+                                
                                 </ul>
                             </div>
                             <form action="teamcontact.php" method="post" class="wpcf7-form init">
@@ -386,65 +384,74 @@
                 </div>
             </section>
             
-        </div>
+        </div> -->
 
 
-    <footer id="site-footer" class="site-footer footer-v2">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <img src="images/logo-light.png" alt="">
+   
+        <footer id="site-footer" class="site-footer footer-v1">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                        <div class="widget-footer">
+                            <h5 class="text-white">Services</h5>
+                            <ul class="list-items">
+                                <li class="list-item"><a href="web-development.html">Web Development</a></li>
+                                <li class="list-item"><a href="mobile-development.html">Mobile Development</a></li>
+                                <li class="list-item"><a href="it-services.html">On-Demand Apps</a></li>
+                                <li class="list-item"><a href="our-team.html">Dedicated Team</a></li>
+                                <li class="list-item"><a href="it-services.html">iOS & Android</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!--<div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                        <div class="widget-footer">
+                            <h5 class="text-white">Learn</h5>
+                            <ul class="list-items">
+                                <li class="list-item"><a href="it-services.html">Social Media Platform</a></li>
+                                <li class="list-item"><a href="it-services.html">Business Management Tools</a></li>
+                                <li class="list-item"><a href="it-services.html">Gambling & Betting Web Apps</a></li>
+                                <li class="list-item"><a href="it-services.html">Sports and Fitness App</a></li>
+                                <li class="list-item"><a href="it-services.html">Software as a Service (SaaS)</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                        <div class="widget-footer">
+                            <h5 class="text-white">Company</h5>
+                            <ul class="list-items">
+                                <li class="list-item"><a href="about-us.html">About Company</a></li>
+                                <li class="list-item"><a href="faq.html">For Customers</a></li>
+                                <li class="list-item"><a href="blog.html">Blog & News</a></li>
+                                <li class="list-item"><a href="contact.html">Careers & Reviews</a></li>
+                                <li class="list-item"><a href="contact.html">Sitemap</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                        <div class="widget-footer">
+                            <h5 class="text-white">Subscribe</h5>
+                            <p>Follow our newsletter to stay updated  about agency.</p>
+                            <form id="mc4wp-form-1" class="mc4wp-form mc4wp-form-1343" method="post" action="newsletter.php">
+                                <div class="mc4wp-form-fields">
+                                    <div class="subscribe-inner-form">
+                                        <input type="email" name="email" placeholder="Your Email" required="">
+                                        <button type="submit" class="subscribe-btn-icon"><i class="flaticon-telegram"></i></button>
+                                    </div>  
+                                </div>
+                            </form>
+                        </div>
+                    </div>-->
+                </div>
+                <div class="row mt-65">
+                    <div class="col-md-6 mb-4 mb-md-0">
+                        <img src="images/logo/mtflogo.png" alt="" class="lazyloaded" data-ll-status="loaded">
+                    </div>
+                    <div class="col-md-6 text-left text-md-right align-self-center">
+                        <p class="copyright-text">Copyright © 2023</p>
+                    </div>
                 </div>
             </div>
-            <div class="space-60"></div>
-            <div class="row justify-content-center">
-                <div class="col-md-4 col-sm-6">
-                    <div class="contact-info box-style2 ft-contact-info">
-                        <div class="box-icon"><i class="flaticon-world-globe"></i></div>
-                        <p>411 University St, Seattle, USA</p>
-                        <h6>Our Address</h6>                                            
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <div class="contact-info box-style2 ft-contact-info">
-                        <div class="box-icon"><i class="flaticon-envelope"></i></div>
-                        <p>contact@mail.net</p>
-                        <h6>Our Mailbox</h6>                                            
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <div class="contact-info box-style2 ft-contact-info">
-                        <div class="box-icon"><i class="flaticon-phone-1"></i></div>
-                        <p>+1 -800-456-478-23</p>
-                        <h6>Our Phone</h6>                                          
-                    </div>
-                </div>
-            </div>
-            <div class="space-65"></div>
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <div class="footer-menu">
-                        <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contact.html">Contacts</a></li>
-                        </ul>
-                    </div>
-                    <div class="space-20"></div>
-                    <p class="copyright-text v2">Copyright © 2020 Engitech by ThemeModern. All Rights Reserved.</p>
-                    <div class="space-26"></div>
-                    <div class="ft-list-icon">
-                        <a class="twitter" href="twitter.com"><i class="fab fa-twitter"></i></a>
-                        <a class="facebook" href="facebook.com"><i class="fab fa-facebook-f"></i></a>
-                        <a class="linkedin" href="linkedin.com"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="instagram" href="instagram.com"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer><!-- #site-footer -->
+        </footer><!-- #site-footer -->
 </div><!-- #page -->
 <a id="back-to-top" href="#" class="show"><i class="flaticon-up-arrow"></i></a>
         <!-- jQuery -->
