--- a/sam-ceramics.html
+++ b/sam-ceramics.html
@@ -226,10 +226,10 @@
             <div class="page-header flex-middle">
                 <div class="container">
                     <div class="inner flex-middle">
-                        <h1 class="page-title">The Country Resort</h1>
+                        <h1 class="page-title">SAM Ceramics</h1>
                         <ul id="breadcrumbs" class="breadcrumbs none-style">
                             <li><a href="index.html">Home</a></li>
-                            <li class="active">The Country Resort</li>
+                            <li class="active">SAM Ceramics</li>
                         </ul>    
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2>The Country Resort</h2>
+                            <h2>SAM Ceramics</h2>
                         </div>   
                     </div>
                     <div class="row">
@@ -257,7 +257,7 @@
                         <div class="col-lg-3 col-md-6 col-sm-6 col-6 mb-4 mb-sm-0">
                             <div class="project-detail">
                                 <span>CLIENT:</span>
-                                <strong>The Country Resort</strong>
+                                <strong>SAM Ceramics</strong>
                             </div>
                         </div>
                         <!-- <div class="col-lg-3 col-md-6 col-sm-6 col-6">
@@ -278,7 +278,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h3>Client's Challenges: </h3>
-                            <p><span class="drop-cap"><span class="drop-cap-letter">C</span></span> ountry Resort, a unit of Prestige Vacations Pvt Ltd, faced the challenge of establishing its initial online presence. With no previous website, the client needed to overcome the hurdle of creating a platform that effectively showcased the resort's appeal while incorporating essential functionalities for potential guests.
+                            <p><span class="drop-cap"><span class="drop-cap-letter">S</span></span> AM Ceramics, the largest tiles and ceramics distributor in Karaikudi, faced challenges with the outdated interface of their website. The existing design did not effectively showcase the extensive range of products and services offered by SAM Ceramics, potentially impacting customer engagement and hindering the exploration of their diverse product catalog. The client recognized the need for a modernized web presence to better represent their brand and products in the digital space.
                             <!-- <blockquote>
                                 <p>I cannot give you the formula for success, but I can give you the formula for failure. <br> It is: Try to please everybody.<br>
                                 <cite>– Herbert Bayard Swope</cite></p>
@@ -290,7 +290,7 @@
                                 <div class="projects-slide-item">
                                     <img src="images/projects/project-details-s2.png" alt="">
                                 </div>
-                                <div class="projects-slide-item">
+                                <div class="projects-slide-item">z
                                     <img src="images/projects/project-details-s1.png" alt="">
                                 </div>
                                 <div class="projects-slide-item">
@@ -298,7 +298,8 @@
                                 </div>
                             </div>
                             <h3>Our Solution:</h3>
-                            <p>In response to this, our team initiated the development of Country Resort's inaugural website. Focusing on a clean and captivating design, we built a user-friendly platform that not only introduced the resort to the online audience but also incorporated an integrated booking system, ensuring a seamless experience for visitors looking to explore and reserve accommodations. Emphasizing a mobile-first approach, the website was meticulously designed to be responsive across various devices, providing an optimal viewing experience for users on smartphones and tablets. Additionally, we implemented robust SEO practices to enhance the resort's online visibility, ensuring that it ranks favorably in search engine results, driving organic traffic and further establishing Country Resort's presence in the digital landscape. By providing a comprehensive solution for their first online venture, we set the foundation for Country Resort to successfully connect with its audience, facilitate hassle-free bookings, and achieve a strong online presence from the outset.</p>
+                            <p>In response to SAM Ceramics' challenges, our team embarked on the task of revamping their website interface. We focused on creating a visually appealing and intuitive design that showcased the breadth and quality of their tiles and ceramics collection. The revamped interface incorporated user-friendly navigation, allowing visitors to easily explore the diverse product categories. To enhance the user experience, we integrated high-quality visuals and product descriptions, ensuring that the website served as an effective virtual showroom. Additionally, the implementation of responsive design principles ensured that the website functioned seamlessly on various devices, from desktops to mobile phones, enhancing accessibility for a wider audience. The result was a transformed online platform that not only reflected the excellence of SAM Ceramics' products but also provided a user-friendly experience, ultimately contributing to increased customer engagement and satisfaction.
+                            </p>
                             <!-- <div class="blog-post projects-meta">
                                 <div class="entry-footer clearfix">
                                     <div class="widget_tag_cloudd tagcloud">
