--- a/sriganesam .html
+++ b/sriganesam .html
@@ -226,10 +226,10 @@
             <div class="page-header flex-middle">
                 <div class="container">
                     <div class="inner flex-middle">
-                        <h1 class="page-title">The Country Resort</h1>
+                        <h1 class="page-title">Sriganesam</h1>
                         <ul id="breadcrumbs" class="breadcrumbs none-style">
                             <li><a href="index.html">Home</a></li>
-                            <li class="active">The Country Resort</li>
+                            <li class="active">Sriganesam</li>
                         </ul>    
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2>The Country Resort</h2>
+                            <h2>Sriganesam</h2>
                         </div>   
                     </div>
                     <div class="row">
@@ -257,7 +257,7 @@
                         <div class="col-lg-3 col-md-6 col-sm-6 col-6 mb-4 mb-sm-0">
                             <div class="project-detail">
                                 <span>CLIENT:</span>
-                                <strong>The Country Resort</strong>
+                                <strong>Sriganesam</strong>
                             </div>
                         </div>
                         <!-- <div class="col-lg-3 col-md-6 col-sm-6 col-6">
@@ -278,7 +278,9 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h3>Client's Challenges: </h3>
-                            <p><span class="drop-cap"><span class="drop-cap-letter">C</span></span> ountry Resort, a unit of Prestige Vacations Pvt Ltd, faced the challenge of establishing its initial online presence. With no previous website, the client needed to overcome the hurdle of creating a platform that effectively showcased the resort's appeal while incorporating essential functionalities for potential guests.
+                            <p><span class="drop-cap"><span class="drop-cap-letter">S</span></span> riganesam, an online store specializing in antique and organic products, faced challenges due to the absence of a dedicated website. Without a digital platform, the client encountered limitations in reaching a broader customer base and effectively showcasing the unique range of antique and organic items they offered. The need for a comprehensive online store that could convey the essence of their products and facilitate seamless transactions became apparent.
+
+
                             <!-- <blockquote>
                                 <p>I cannot give you the formula for success, but I can give you the formula for failure. <br> It is: Try to please everybody.<br>
                                 <cite>– Herbert Bayard Swope</cite></p>
@@ -298,7 +300,7 @@
                                 </div>
                             </div>
                             <h3>Our Solution:</h3>
-                            <p>In response to this, our team initiated the development of Country Resort's inaugural website. Focusing on a clean and captivating design, we built a user-friendly platform that not only introduced the resort to the online audience but also incorporated an integrated booking system, ensuring a seamless experience for visitors looking to explore and reserve accommodations. Emphasizing a mobile-first approach, the website was meticulously designed to be responsive across various devices, providing an optimal viewing experience for users on smartphones and tablets. Additionally, we implemented robust SEO practices to enhance the resort's online visibility, ensuring that it ranks favorably in search engine results, driving organic traffic and further establishing Country Resort's presence in the digital landscape. By providing a comprehensive solution for their first online venture, we set the foundation for Country Resort to successfully connect with its audience, facilitate hassle-free bookings, and achieve a strong online presence from the outset.</p>
+                            <p>In response to Sriganesam's challenges, our team embarked on designing and developing a customized website. We focused on creating a visually appealing and user-friendly online store that effectively highlighted the distinct categories of antique and organic products. The website incorporated an intuitive navigation system, allowing visitors to explore the diverse product offerings effortlessly. To enhance the shopping experience, we implemented a secure and streamlined checkout process. Additionally, the website was optimized for mobile responsiveness to cater to users accessing it on various devices. By integrating a visually engaging design with robust e-commerce functionalities, our solution provided Sriganesam with a dynamic online platform that not only showcased their unique products but also offered a seamless and enjoyable shopping experience for their customers.</p>
                             <!-- <div class="blog-post projects-meta">
                                 <div class="entry-footer clearfix">
                                     <div class="widget_tag_cloudd tagcloud">
