--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,7 @@
             </div>
             <div class="row mt-65">
                 <div class="col-md-6 mb-4 mb-md-0">
-                    <img src="images/logo.png" alt="" class="lazyloaded" data-ll-status="loaded">
+                    <img src="images/logo/mtflogo.png" alt="" class="lazyloaded" data-ll-status="loaded">
                 </div>
                 <div class="col-md-6 text-left text-md-right align-self-center">
                     <p class="copyright-text">Copyright © 2023</p>
