--- a/pacderm-vision.html
+++ b/pacderm-vision.html
@@ -226,10 +226,10 @@
             <div class="page-header flex-middle">
                 <div class="container">
                     <div class="inner flex-middle">
-                        <h1 class="page-title">The Country Resort</h1>
+                        <h1 class="page-title">Pacderm Vision</h1>
                         <ul id="breadcrumbs" class="breadcrumbs none-style">
                             <li><a href="index.html">Home</a></li>
-                            <li class="active">The Country Resort</li>
+                            <li class="active">Pacderm Vision</li>
                         </ul>    
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2>The Country Resort</h2>
+                            <h2>Pacderm Vision</h2>
                         </div>   
                     </div>
                     <div class="row">
@@ -257,7 +257,7 @@
                         <div class="col-lg-3 col-md-6 col-sm-6 col-6 mb-4 mb-sm-0">
                             <div class="project-detail">
                                 <span>CLIENT:</span>
-                                <strong>The Country Resort</strong>
+                                <strong>Pacderm Vision</strong>
                             </div>
                         </div>
                         <!-- <div class="col-lg-3 col-md-6 col-sm-6 col-6">
@@ -278,7 +278,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h3>Client's Challenges: </h3>
-                            <p><span class="drop-cap"><span class="drop-cap-letter">C</span></span> ountry Resort, a unit of Prestige Vacations Pvt Ltd, faced the challenge of establishing its initial online presence. With no previous website, the client needed to overcome the hurdle of creating a platform that effectively showcased the resort's appeal while incorporating essential functionalities for potential guests.
+                            <p><span class="drop-cap"><span class="drop-cap-letter">P</span></span> acderm Vision, a leading medical equipment supplier in Kuala Lumpur, faced challenges in establishing a strong online presence. With an absence of a dedicated website, the client encountered difficulties in effectively showcasing their range of medical equipment and services to a wider audience. The need for a modern, informative, and accessible online platform was evident to enhance visibility and engage potential customers.
                             <!-- <blockquote>
                                 <p>I cannot give you the formula for success, but I can give you the formula for failure. <br> It is: Try to please everybody.<br>
                                 <cite>– Herbert Bayard Swope</cite></p>
@@ -298,7 +298,8 @@
                                 </div>
                             </div>
                             <h3>Our Solution:</h3>
-                            <p>In response to this, our team initiated the development of Country Resort's inaugural website. Focusing on a clean and captivating design, we built a user-friendly platform that not only introduced the resort to the online audience but also incorporated an integrated booking system, ensuring a seamless experience for visitors looking to explore and reserve accommodations. Emphasizing a mobile-first approach, the website was meticulously designed to be responsive across various devices, providing an optimal viewing experience for users on smartphones and tablets. Additionally, we implemented robust SEO practices to enhance the resort's online visibility, ensuring that it ranks favorably in search engine results, driving organic traffic and further establishing Country Resort's presence in the digital landscape. By providing a comprehensive solution for their first online venture, we set the foundation for Country Resort to successfully connect with its audience, facilitate hassle-free bookings, and achieve a strong online presence from the outset.</p>
+                            <p>In response to Pacderm Vision's challenges, our team took on the task of designing and developing a comprehensive website. We focused on creating a user-friendly interface that effectively highlighted the diverse range of medical equipment and services offered by the client. The website incorporated detailed product listings, accompanied by relevant specifications and features. To ensure a seamless experience, we implemented easy navigation and a clear structure, enabling visitors to explore the product catalog effortlessly. Additionally, a mobile-responsive design was employed to cater to users accessing the website on various devices. The result was a dynamic online showcase that not only showcased Pacderm Vision's commitment to providing high-quality medical equipment but also facilitated enhanced engagement with their target audience in Kuala Lumpur and beyond.
+                            </p>
                             <!-- <div class="blog-post projects-meta">
                                 <div class="entry-footer clearfix">
                                     <div class="widget_tag_cloudd tagcloud">
