--- a/prestige-vacations.html
+++ b/prestige-vacations.html
@@ -226,10 +226,10 @@
             <div class="page-header flex-middle">
                 <div class="container">
                     <div class="inner flex-middle">
-                        <h1 class="page-title">The Country Resort</h1>
+                        <h1 class="page-title">Prestige Vacations</h1>
                         <ul id="breadcrumbs" class="breadcrumbs none-style">
                             <li><a href="index.html">Home</a></li>
-                            <li class="active">The Country Resort</li>
+                            <li class="active">Prestige Vacations</li>
                         </ul>    
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2>The Country Resort</h2>
+                            <h2>Prestige Vacations</h2>
                         </div>   
                     </div>
                     <div class="row">
@@ -257,7 +257,7 @@
                         <div class="col-lg-3 col-md-6 col-sm-6 col-6 mb-4 mb-sm-0">
                             <div class="project-detail">
                                 <span>CLIENT:</span>
-                                <strong>The Country Resort</strong>
+                                <strong>Prestige Vacations</strong>
                             </div>
                         </div>
                         <!-- <div class="col-lg-3 col-md-6 col-sm-6 col-6">
@@ -278,7 +278,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h3>Client's Challenges: </h3>
-                            <p><span class="drop-cap"><span class="drop-cap-letter">C</span></span> ountry Resort, a unit of Prestige Vacations Pvt Ltd, faced the challenge of establishing its initial online presence. With no previous website, the client needed to overcome the hurdle of creating a platform that effectively showcased the resort's appeal while incorporating essential functionalities for potential guests.
+                            <p><span class="drop-cap"><span class="drop-cap-letter">P</span></span> restige Vacations, a prominent leisure and hospitality company, faced challenges with the outdated interface of their website. The existing design did not effectively reflect the luxury and allure of their vacation offerings, potentially hindering user engagement and the conversion of website visitors into customers. The client sought a transformation to address these challenges and enhance the overall user experience.
                             <!-- <blockquote>
                                 <p>I cannot give you the formula for success, but I can give you the formula for failure. <br> It is: Try to please everybody.<br>
                                 <cite>– Herbert Bayard Swope</cite></p>
@@ -298,7 +298,7 @@
                                 </div>
                             </div>
                             <h3>Our Solution:</h3>
-                            <p>In response to this, our team initiated the development of Country Resort's inaugural website. Focusing on a clean and captivating design, we built a user-friendly platform that not only introduced the resort to the online audience but also incorporated an integrated booking system, ensuring a seamless experience for visitors looking to explore and reserve accommodations. Emphasizing a mobile-first approach, the website was meticulously designed to be responsive across various devices, providing an optimal viewing experience for users on smartphones and tablets. Additionally, we implemented robust SEO practices to enhance the resort's online visibility, ensuring that it ranks favorably in search engine results, driving organic traffic and further establishing Country Resort's presence in the digital landscape. By providing a comprehensive solution for their first online venture, we set the foundation for Country Resort to successfully connect with its audience, facilitate hassle-free bookings, and achieve a strong online presence from the outset.</p>
+                            <p>Our team undertook the task of revamping Prestige Vacations' website interface to meet the evolving demands of the digital landscape. Through a collaborative process, we designed a modern and visually appealing interface that captured the essence of luxury associated with their vacation experiences. The revamped design not only improved aesthetics but also prioritized user navigation and engagement. Additionally, we integrated cutting-edge technologies and responsive design elements to ensure optimal performance across various devices, enhancing the website's accessibility and user satisfaction. The result was a revitalized online presence that aligned seamlessly with Prestige Vacations' brand image, fostering a more engaging and user-friendly experience for their audience.</p>
                             <!-- <div class="blog-post projects-meta">
                                 <div class="entry-footer clearfix">
                                     <div class="widget_tag_cloudd tagcloud">
